# kleinduimpje

./: .gitignore  README.md  app-gpxpy.py  app-shiny.py  app.py  debug_gpx.py  fit2gpx.py  justfile  main.py  pyproject.toml  tracks.py
notebooks/: tracks.py
test/data/: test.fit  test.gpx
