[project]
name = "kleinduimpje"
version = "0.1.0"
description = "Playing around with Garmin files on Marimo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "fitparse>=1.2.0",
    "folium>=0.20.0",
    "gpxpy>=1.6.2",
    "ipyleaflet>=0.20.0",
    "marimo>=0.18.0",
    "shiny>=1.5.0",
    "shinylive>=0.8.4",
    "shinywidgets>=0.7.0",
]
