[project]
name = "kleinduimpje"
version = "0.1.0"
description = "Playing around with Garmin files on Marimo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "fitparse>=1.2.0",
    "folium>=0.20.0",
    "fsspec>=2025.10.0",
    "gpxpy>=1.6.2",
    "httpx>=0.28.1",
    "ipyleaflet>=0.20.0",
    "marimo>=0.18.0",
    "pyodide-http>=0.2.2",
    "requests>=2.32.5",
    "shiny>=1.5.0",
    "shinylive>=0.8.4",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.7.0",
]

[tool.kleinduimpje]
repo = "https://github.com/dkapitan/kleinduimpje"
