[project]
name = "kleinduimpje"
version = "0.1.0"
description = "GPX Route Visualizer built with Shinylive"
authors = [
    {name = "Daniel Kapitan", email = "daniel@kapitan.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fiona>=1.10.1",
    "fitparse>=1.2.0",
    "folium>=0.20.0",
    "fsspec[github]>=2025.10.0",
    "gpxpy>=1.6.2",
    "httpx>=0.28.1",
    "ipyleaflet>=0.20.0",
    "pyodide-http>=0.2.2",
    "requests>=2.32.5",
    "shiny>=1.5.0",
    "shinyswatch>=0.9.0",
    "shinywidgets>=0.7.0",
]

[project.urls]
Repository = "https://github.com/dkapitan/kleinduimpje"
Homepage = "https://kapitan.net/kleinduimpje"

[dependency-groups]
dev = [
    "marimo>=0.18.0",
    "ruff>=0.14.7",
    "shinylive>=0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.kleinduimpje]
# Optional: Override repository configuration
# github_repo = "username/repo"
github_branch = "main"
gpx_folder = "data"



